Update style when url filter changes

Bug: 863037
Change-Id: I2d0b34d0a6e3b7199e6dd8ec183d13f7aec2e7c4
Reviewed-on: https://chromium-review.googlesource.com/1187391
Reviewed-by: Fernando Serboncini <fserb@chromium.org>
Commit-Queue: Aaron Krajeski <aaronhk@chromium.org>
Cr-Commit-Position: refs/heads/master@{#585972}
Former-commit-id: 9e07b5b9aa717bb23d9dcc0a9f5d1760afab3331